kernel/headers/SnapPea.h


typedef enum
{
    not_attempted,          
    geometric_solution,     
    nongeometric_solution,  
    flat_solution,          
    degenerate_solution,    
    other_solution,         
    no_solution,            
    externally_computed     
} SolutionType;
typedef enum
{
    func_OK = 0,
    func_cancelled,
    func_failed,
    func_bad_input
} FuncResult;
typedef struct
{
    Real  real;
    Real  imag;
} Complex;
typedef char   Boolean;
typedef enum
{
    orientation_reversing = 0,
    orientation_preserving = 1,
    unknown_parity = -1
} MatrixParity;
typedef Complex SL2CMatrix[2][2];
typedef struct
{
    SL2CMatrix      matrix;
    MatrixParity    parity;
} MoebiusTransformation;
typedef Real O31Matrix[4][4];
typedef Real GL4RMatrix[4][4];
typedef Real O31Vector[4];
typedef int MatrixInt22[2][2];
typedef struct
{
    int         num_torsion_coefficients;   
    long int    *torsion_coefficients;      
} AbelianGroup;
typedef enum
{
    orbifold1_unknown,
    orbifold_s1,    
    orbifold_mI     
} Orbifold1;
typedef enum
{
    orbifold_nn,    
    orbifold_no,    
    orbifold_xnn,   
    orbifold_2xn,   
    orbifold_22n    
} Orbifold2;
typedef struct
{
    Complex         length;
    MatrixParity    parity;
    Orbifold1       topology;
    int             multiplicity;
    O31Matrix       matrix;
    int             *word;     
} MultiLength;
typedef struct
{
    Complex center;
    Real  radius;
    int     cusp_index;
} CuspNbhdHoroball;
typedef struct
{
    int                 num_horoballs;
    CuspNbhdHoroball    *horoball;
} CuspNbhdHoroballList;
typedef struct
{
    Complex endpoint[2];
    int     start_index,
            middle_index,
            end_index;
} CuspNbhdSegment;
typedef struct
{
    int             num_segments;
    CuspNbhdSegment *segment;
} CuspNbhdSegmentList;
typedef enum
{
    oriented_manifold,
    nonorientable_manifold,
    unknown_orientability
} Orientability;
typedef enum
{
    torus_cusp,
    Klein_cusp,
    unknown_topology
} CuspTopology;
typedef enum
{
    Dirichlet_interactive,
    Dirichlet_stop_here,
    Dirichlet_keep_going
} DirichletInteractivity;
typedef struct
{
    Boolean is_available;
    Boolean negative_determinant;
    Boolean negative_trace;
    int     num_LR_factors;
    char    *LR_factors;
} LRFactorization;
typedef struct
{
    O31Vector   normal;
    O31Vector   center;
    O31Vector   radialA;
    O31Vector   radialB;
    int         index;
} Shingle;
typedef struct
{
    int         num_shingles;
    Shingle     *shingles;
} Shingling;
typedef struct Triangulation                Triangulation;
typedef struct IsometryList                 IsometryList;
typedef struct SymmetryGroup                SymmetryGroup;
typedef struct SymmetryGroupPresentation    SymmetryGroupPresentation;
typedef struct DualOneSkeletonCurve         DualOneSkeletonCurve;
typedef struct TerseTriangulation           TerseTriangulation;
typedef struct GroupPresentation            GroupPresentation;
typedef struct CuspNeighborhoods            CuspNeighborhoods;
typedef struct NormalSurfaceList            NormalSurfaceList;